@@ -3,6 +3,9 @@ What's New in IDLE 1.2c1?
 
 *Release date: XX-AUG-2006*
 
+- Retrieval of previous shell command was not always preserving indentation
+  (since 1.2a1) Patch 1528468 Tal Einat.
+
 - Changing tokenize (39046) to detect dedent broke tabnanny check (since 1.2a1)
 
 - ToggleTab dialog was setting indent to 8 even if cancelled (since 1.2a1).
